--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
                 overflow: visible;
                 background: black;
             }
+            
+            /* from http://stackoverflow.com/questions/7615009/disable-interpolation-when-scaling-a-canvas */
+            canvas {
+			    image-rendering: optimizeSpeed;
+			    image-rendering: -moz-crisp-edges;
+			    image-rendering: -webkit-optimize-contrast;
+			    image-rendering: optimize-contrast;
+			    -ms-interpolation-mode: nearest-neighbor;
+			    image-rendering: -o-crisp-edges;
+			}
         </style>
     </head>
     <body>
