--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html><head>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
-        <script src="racer.js"></script>
+		<title>RacerJs Turbo Challenge</title>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
+        <script src="data.js"></script>
+        <script src="tools.js"></script>
+        <script src="game.js"></script>
+        
         <style>
             html, body {
                 margin: 0;
@@ -10,6 +14,7 @@
                 background: black;
             }
             
+            /* nearest neighbor interpolation */
             /* from http://stackoverflow.com/questions/7615009/disable-interpolation-when-scaling-a-canvas */
             canvas {
 			    image-rendering: optimizeSpeed;
@@ -22,6 +27,6 @@
         </style>
     </head>
     <body>
-        <canvas id="c" style="position: absolute;"></canvas>
+        <canvas id="c" style="position: absolute; -webkit-transform: translateZ(0)"></canvas>
     </body>
 </html>
