--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
             
             /* nearest neighbor interpolation */
             /* from http://stackoverflow.com/questions/7615009/disable-interpolation-when-scaling-a-canvas */
-            canvas {
+            /*canvas {
 			    image-rendering: optimizeSpeed;
 			    image-rendering: -moz-crisp-edges;
 			    image-rendering: -webkit-optimize-contrast;
 			    image-rendering: optimize-contrast;
 			    -ms-interpolation-mode: nearest-neighbor;
 			    image-rendering: -o-crisp-edges;
-			}
+			}*/
         </style>
     </head>
     <body>
