- added touch control - change race end rendering (not complete)

--- a/index.html
+++ b/index.html
@@ -1,29 +1,19 @@
 <!DOCTYPE html>
 <html><head>
 		<title>RacerJs Turbo Challenge</title>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
-        <script src="data.js"></script>
-        <script src="tools.js"></script>
-        <script src="game.js"></script>
-        
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
+        <script type="text/javascript" src="data.js"></script>
+        <script type="text/javascript" src="tools.js"></script>
+        <script type="text/javascript" src="game.js"></script>
+        <meta name="viewport" content="width=device-width, user-scalable=no" />
+        <meta name="apple-mobile-web-app-capable" content="yes" />
         <style>
             html, body {
                 margin: 0;
                 padding: 0;
                 overflow: visible;
                 background: black;
-            }
             
-            /* nearest neighbor interpolation */
-            /* from http://stackoverflow.com/questions/7615009/disable-interpolation-when-scaling-a-canvas */
-            /*canvas {
-			    image-rendering: optimizeSpeed;
-			    image-rendering: -moz-crisp-edges;
-			    image-rendering: -webkit-optimize-contrast;
-			    image-rendering: optimize-contrast;
-			    -ms-interpolation-mode: nearest-neighbor;
-			    image-rendering: -o-crisp-edges;
-			}*/
         </style>
     </head>
     <body>
